force-app/main/default/objects/ServiceAppointment/fields/ASR_Email__c.field-meta.xml
<CustomField>
    <fullName>ASR_Email__c</fullName>
    <description>The SR email from the AR</description>
    <label>ASR Email</label>
    <type>Email</type>
</CustomField>