force-app/main/default/objects/ServiceAppointment/fields/Check_Assigned_Resource__c.field-meta.xml
<CustomField>
    <fullName>Check_Assigned_Resource__c</fullName>
    <formula>IF( User__c = $User.Id, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Assigned Resource</label>
    <type>Checkbox</type>
</CustomField>