force-app/main/default/objects/ServiceAppointment/fields/First_SA_created__c.field-meta.xml
<CustomField>
    <fullName>First_SA_created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To distinguish the first SA created and the rest for assigning the SR to the BWOs</description>
    <label>First SA created</label>
    <type>Checkbox</type>
</CustomField>