force-app/main/default/objects/ServiceAppointment/fields/The_Service_Resource_from_the_Assigned_R__c.field-meta.xml
<CustomField>
    <fullName>The_Service_Resource_from_the_Assigned_R__c</fullName>
    <description>The SR assigned for this SA relating to the WO</description>
    <label>Service Resource</label>
    <type>TextArea</type>
</CustomField>