force-app/main/default/objects/ServiceAppointment/listViews/My_New_SA_List.listView-meta.xml
<ListView>
    <fullName>My_New_SA_List</fullName>
    <columns>Name</columns>
    <columns>ArrivalWindowStartTime</columns>
    <columns>ArrivalWindowEndTime</columns>
    <columns>Status</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Check_Assigned_Resource__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Service Appointment List View</label>
</ListView>